--- a/css/styles.css
+++ b/css/styles.css
@@ -3,97 +3,212 @@
     padding: 0;
     box-sizing: border-box;
 }
-.background{
-    background-color: #8159a7;
-}
 
-h1{
-    background-color: #d9d9d9;
-    color: #fa0b0b;
-    text-align: center;
-    font-style: italic;
-}
+.contenedor{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "navbar navbar navbar"
+                         "header header header"
+                         "main   main   main"
+                         "aside aside   aside"
+                         "footer footer footer"  ;
+    background: #0F2027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+.navbar{
+    grid-area: navbar;
+    display: flex;
+    flex-direction: row;
+    background-color: #0F2027;
+    justify-content: space-between;
+    border-radius: 5px;
+    margin: 0 20px;
+}
+.navbar div{
+    display: flex;
+    flex-direction: row;
+    order: -1;
+    background-image: url(../imagenes/Letra.png);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-color: rgba(255, 255, 255, 0.37);
+    align-items: center;
+    
+}
+.navbar ul{
+    
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-around;
+    border-radius: 4px;
+    padding: 10px;
+    
+    font-size: 20px;
+    
+}
 .btn1{
-    
-    background-color:#d9d9d9 ;
-    
-}
-ul li{
-    display: inline-block;
-    padding: 30px;
+    box-shadow: none;
+    text-decoration: none;
+    color: #f0f8ff62;
+    background-color: #2c536442;
+    border-radius: 7px;
+    padding: 7px;
+    display: flex;
+    margin-left: 10px;
 
 }
-h2{
-    background-color: #d9d9d9;
-    color: #fa0b0b;
-    margin: 15px;
-    font-style: italic;
-    padding: 15 10;
+.header{
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    color: #f0f8ffcc;
+
+
+}
+.main{
+    grid-area: main;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+
 }
 .parrafos{
-    padding: 30px;
-    margin: 15px;
-    border: 10px;
-    font-style: oblique;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    align-items: center;
+    color: #f0f8ff62;
+    
+}
+.parrafos h2{
+    margin-bottom: 10px;
+}
+.parrafos div p{
+    margin-top: 15px;
+    font-size: 20px;
+    text-align: center;
+}
+.btn2  {
+    box-shadow: none;
+    text-decoration: none;
+    color: #f0f8ff62;
+    
+}
+.btn2 p{
+    background-color: #0F2027;
+    border-radius: 7px;
+    padding: 10px;
+}
 
+
+.imgPrincipal{
+    background-image: url(../imagenes/MIA.gif);
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-size: cover;
+
+}
+.aside{
+    grid-area: aside;
+    color: #f0f8ff62;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.btn1 p{
+    font-size: 40px;
+    margin-top: 10px;
+    padding: 5px;
+    border: 2px solid #1a3f4e6b;
+    border-radius: 50% ;
+    background-color: #0F2027;
 }
 .footer{
-    background-color: #d9d9d9;
-    font-style: oblique;
+    grid-area: footer;
 
 }
-
-.t1{
-    margin: 10px;
-    text-decoration: underline;
-    color: #d9d9d9;
-    font-style: oblique;
+.footer h5{
+    color: #f0f8ff62;
+    font-size: 20px;
+    margin-left: 10px;
+    margin-bottom: 20px;
 }
-
-IMG{
-    width: 350px;
+.redesSociales{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    
     
 }
-.formulario{
-    text-align: center;
-    margin: 40px;
-    border: 10px;
-    padding: 5px;
-    font-style: oblique;
-}
-ol li p{
-    text-align: left;
-    display: inline;
-}
-.formularioEspacio{
-    padding-top: 30px;
-    color: #d9d9d9;
-    
-}
-.comentario{
-    color: #d9d9d9;
-    margin: 25px;
-    padding-top: 15px;
-    font-style: oblique;
-}
-.imgcontacto{
-    width: 50px;
-    
-}
-.tabla{
-    font-style: oblique;
-    color: #d9d9d9;
-    border: solid 3px #d9d9d9;
-    padding: 15px;
-    margin: 20px;
-    width: 70%;
+.redesSociales a{
+    box-shadow: none;
+    text-decoration: none;
+    color: #f0f8ff62;
+    background-color: #0f202762;
+    padding: 10px;
+    border-radius: 10%;
 }
 
-.backgroundImg{
-    background-image: url("../imagenes/background.jpg");
-    width: 100%;
-    height: 100px;
-    background-size: cover;
-}
+@media(min-width:600px){
+    .btn1{
+        margin-left: 30px;
+    }
+    .header{
+        margin-bottom: 50px;
+    }
+    .main{
+        flex-direction: row;
+        margin: 0 80px;
+        
 
+    }
+    .parrafos{
+        align-items: flex-start;
+        margin: 30px;
+    }
+    .parrafos div p {
+        text-align: start;
+    }
+    .aside{
+        flex-direction: row;
+        background-color: #0f2027b0;
+        
+        margin-top: 60px;
+    }
+    .footer{
+        background-color: #0f2027b0;
+        
+        margin-top: 50px;
+        
+    }
+    .imgPrincipal{
+        background-image: url(../imagenes/MIA.gif);
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        background-size: cover;
+        margin-right: 25px;
+    
+    }
+
+    .contenedor{
+        grid-template-rows: 70px 100px 400px 130px ;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas: "navbar navbar navbar"
+                            "header header header"
+                            "main   main   main"
+                            "aside  footer footer";
+    }
+    
+}
